[package]
name = "asyncapioxide"
description = "Socket IO server with AsycnAPI doc generation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
socketioxide.workspace = true
schemars.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0"
features = ["full"]

[dependencies.quote]
version = "1.0"
