[package]
name = "test_tmp"
version.workspace = true
edition.workspace = true


[dependencies]
asyncapi.workspace = true
asyncapioxide = { path = "../../asyncapioxide" }
socketioxide = { workspace = true, features = ["state"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
indexmap = "1.9.3"
serde_yaml = "0.9.30"

